Remove unneeded Language import; clean up code a little.